k8s_image_validation/constraints.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sImageValidation
metadata:
  name: images-must-come-from-gcr
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    registry: "gcr"
